--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="navbar-left">Free shipping for all orders of <strong>$200</strong></div>
+        <div class="navbar-center"></div>
+        <div class="navbar-right">
+          <a href="#">My account</a>
+          <a href="#">Cart</a>
+          <a href="#">Wishlist</a>
+          <a href="#">Checkout</a>
+        </div>
+    </div>
+    <div class="header">
+        <div>
+          <div class="header-text">Need help?</div>
+          <div>(+123) 123 321 345</div>
+        </div>
+        <div class="search-area">
+          <input type="text" placeholder="Search product">
+
+        </div>
+      </div>
 </body>
 </html>
