--- a/index.html
+++ b/index.html
@@ -1,32 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <div class="navbar">
-        <div class="navbar-left">Free shipping for all orders of <strong>$200</strong></div>
-        <div class="navbar-center"></div>
-        <div class="navbar-right">
-          <a href="#">My account</a>
-          <a href="#">Cart</a>
-          <a href="#">Wishlist</a>
-          <a href="#">Checkout</a>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/global.css">
+  </head>
+  <body>        
+      <header class="header">
+        <div class="header-container">
+          <div class="shoping-info"></div>
+          <div class="navigation-bar">
+            <div class="navigation-item"></div>
+            <div class="navigation-item"></div>
+            <div class="navigation-item"></div>
+            <div class="navigation-item"></div>
+          </div>
+        </div>        
+      </header>
+      <main class="content">
+        <div class="content-container">
+          <div class="page-content-header">
+            <div class="page-content-header-contact"></div>
+            <div class="page-content-header-actions"></div>
+          </div>
+          <div class="page-content-navigation">
+            <div class="page-content-navigation-department"></div>
+            <div class="page-content-navigation-bar">
+              <div class="page-content-navigation-bar-items"></div>
+              <div class="page-content-navigation-bar-items"></div>
+              <div class="page-content-navigation-bar-items"></div>
+              <div class="page-content-navigation-bar-items"></div>
+              <div class="page-content-navigation-bar-items"></div>
+            </div>
+          </div>
+          <div class="page-content-ads">
+            <div class="page-content-ads-item"></div>
+            <div class="page-content-ads-item"></div>
+          </div>
+          <div class="page-content-services">
+            <div class="page-content-services-item"></div>
+            <div class="page-content-services-item"></div>
+            <div class="page-content-services-item"></div>
+            <div class="page-content-services-item"></div>
+          </div>
+          <div class="shop-actions">
+            <div class="shop-actions-item"></div>
+            <div class="shop-actions-item"></div>
+          </div>
+          <div class="shop-actions-categories">
+            <div class="shop-actions-categories-title"></div>
+            <div class="shop-actions-categories-container">
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+            </div>
+          </div>
+          <div class="shop-actions-categories">
+            <div class="shop-actions-categories-title"></div>
+            <div class="shop-actions-categories-container">
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+            </div>
+          </div>
+          <div class="shop-actions-categories">
+            <div class="shop-actions-categories-title"></div>
+            <div class="shop-actions-categories-container">
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+              <div class="shop-actions-product"></div>
+            </div>
+          </div>
+          <div class="page-content-ads">
+            <div class="page-content-ads-item"></div>
+            <div class="page-content-ads-item"></div>
+          </div>
         </div>
-    </div>
-    <div class="header">
-        <div>
-          <div class="header-text">Need help?</div>
-          <div>(+123) 123 321 345</div>
+      </main>
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="subscribe-section">
+          <div class="subscribe-section-title"></div>
+          <div class="subscribe-section-email-input"></div>
+          </div>
+          <div class="footer-navigation">
+            <div class="footer-navigation-item"></div>
+            <div class="footer-navigation-item"></div>
+            <div class="footer-navigation-item"></div>
+            <div class="footer-navigation-item"></div>
+          </div>
+          <div class="footer-info">
+            <div class="social-media"></div>
+            <div class="payments-info"></div>
+          </div>
         </div>
-        <div class="search-area">
-          <input type="text" placeholder="Search product">
-
-        </div>
-      </div>
-</body>
+      </footer>
+      <script></script>
+  </body>
 </html>
