--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>        
       <header class="header">
         <div class="header-container">
-          <div class="shoping-info"></div>
+          <p class="shoping-info">Free shipping for all orders <strong style=>$200</strong></p>
           <div class="navigation-bar">
             <div class="navigation-item"></div>
             <div class="navigation-item"></div>
@@ -23,7 +23,12 @@
         <div class="content-container">
           <div class="page-content-header">
             <div class="page-content-header-contact"></div>
-            <div class="page-content-header-actions"></div>
+            <div class="page-content-header-actions">
+              <input type="text" placeholder="Search products" class="page-content-header-search-box">
+              <button class="page-content-header-action-item">Like</button>
+              <button class="page-content-header-action-item" onclick="onclickShoppingCart()">Shopping</button>
+              <div id="shoppingCartWidget" class="shopping-cart-widget"></div>
+            </div>
           </div>
           <div class="page-content-navigation">
             <div class="page-content-navigation-department"></div>
@@ -100,6 +105,6 @@
           </div>
         </div>
       </footer>
-      <script></script>
+      <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
