--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
         <div class="footer-container">
           <div class="subscribe-section">
           <div class="subscribe-section-title"></div>
-          <div class="subscribe-section-email-input"></div>
+          <div class="subscribe-container">
+            <div class="email-input-container">
+            <input type="email" class="subscribe-section-email-input" placeholder="Enter email adress">
+              <button class="subscribe-button">Subscribe</button>
+            </input>
+          </div>
+          </div>          
           </div>
           <div class="footer-navigation">
             <div class="footer-navigation-item"></div>
