Style page contents. (#1)

--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
             </div>
           </div>
           <div class="page-content-ads">
-            <div class="page-content-ads-item"></div>
-            <div class="page-content-ads-item"></div>
+            <div class="page-content-ads-item">
+              <p class="product-name">Wooden Chair.</p>
+              <p class="product-category">Modern Furniture</p>
+              <p class="product-price">250$</p>
+            </div>
+            <div class="page-content-ads-item">
+              <p class="product-name">Wooden Chair.</p>
+              <p class="product-category">Modern Furniture</p>
+              <p class="product-price">250$</p>
+            </div>
           </div>
           <div class="page-content-services">
             <div class="page-content-services-item"></div>
@@ -76,7 +84,10 @@
             <div class="page-content-services-item"></div>
           </div>
           <div class="shop-actions">
-            <div class="shop-actions-item"></div>
+            <div class="shop-actions-item">
+              <h2>Living Room Set</h2>
+              <h1>Hauteville Plywood New Chair</h1>
+            </div>
             <div class="shop-actions-item"></div>
           </div>
           <div class="shop-actions-categories">
