--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
           </div>
           <div class="shop-actions">
             <div class="shop-actions-item">
-              <h2>Living Room Set</h2>
-              <h1>Hauteville Plywood New Chair</h1>
+              <div class="shop-actions-container">
+                <h2>Living Room Set</h2>
+                <h1>Hauteville Plywood New Chair</h1>
+                <button>Shop Now</button>
+              </div>
             </div>
             <div class="shop-actions-item"></div>
           </div>
@@ -126,13 +129,10 @@
       <footer class="footer">
         <div class="footer-container">
           <div class="subscribe-section">
-          <div class="subscribe-section-title"></div>
+            <div class="subscribe-section-title"></div>
             <div class="subscribe-container">
-              <div class="email-input-container">
-                <input type="email" class="subscribe-section-email-input" placeholder="Enter email address">
-                <button class="subscribe-button">Subscribe</button>
-                </input>
-              </div>
+              <input type="email" class="subscribe-email-input" placeholder="Enter email address"/>
+              <button>Subscribe</button>
             </div>
           </div>
           <div class="footer-navigation">
