Some header fixes.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="page-content-header">
             <div class="page-content-header-contact">
               <i class="fa-solid fa-phone fa-2x"></i>
-              <span>Need some help ?
+              <span style="margin-left: 7px;">Need some help?
                 +35566666666
               </span>
             </div>
@@ -38,7 +38,7 @@
               </div>
               <div class="page-content-header-action-item-search">
                 <button>
-                  <i class="fa-solid fa-search"></i>
+                  <i class="fa-solid fa-search fa-xl"></i>
                 </button>
               </div>
               <div class="page-content-header-action-item">
