Multiple styles fixes and refactors

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="header-container">
           <p class="shopping-info">Free shipping for all orders <strong style=>$200</strong></p>
           <div class="navigation-bar">
-            <div class="navigation-item"></div>
-            <div class="navigation-item"></div>
-            <div class="navigation-item"></div>
-            <div class="navigation-item"></div>
+            <div class="navigation-item">My Account</div>
+            <div class="navigation-item">Cart</div>
+            <div class="navigation-item">Wishlist</div>
+            <div class="navigation-item">Checkout</div>
           </div>
         </div>        
       </header>
@@ -28,15 +28,13 @@
           <div class="page-content-header">
             <div class="page-content-header-contact">
               <i class="fa-solid fa-phone fa-2x"></i>
-              <span style="margin-left: 7px;">Need some help?
-                +35566666666
+              <span>
+                Need help?<br>+355444444446
               </span>
             </div>
             <div class="page-content-header-actions">
               <div class="search-box">
-              <input type="text" placeholder="Search products" class="page-content-header-search-box">
-              </div>
-              <div class="page-content-header-action-item-search">
+              <input type="text" placeholder="Search products"/>
                 <button>
                   <i class="fa-solid fa-search fa-xl"></i>
                 </button>
@@ -52,17 +50,20 @@
                   <i class="fa-solid fa-bag-shopping"></i>
                 </button>
               </div>
+              <p class="shopping-cart-total-price">$54.90</p>
               <div id="shoppingCartWidget" class="shopping-cart-widget"></div>
             </div>
           </div>
           <div class="page-content-navigation">
-            <div class="page-content-navigation-department"></div>
+            <div class="page-content-navigation-department">
+              <p class="page-content-department"><i class="fa-solid fa-list"></i>All Department</p>
+            </div>
             <div class="page-content-navigation-bar">
-              <div class="page-content-navigation-bar-items"></div>
-              <div class="page-content-navigation-bar-items"></div>
-              <div class="page-content-navigation-bar-items"></div>
-              <div class="page-content-navigation-bar-items"></div>
-              <div class="page-content-navigation-bar-items"></div>
+              <div class="page-content-navigation-bar-items">HOME <i class="fa-solid fa-chevron-down"></i></div>
+              <div class="page-content-navigation-bar-items">SHOP <i class="fa-solid fa-chevron-down"></i></div>
+              <div class="page-content-navigation-bar-items">BLOG <i class="fa-solid fa-chevron-down"></i></div>
+              <div class="page-content-navigation-bar-items">PAGES <i class="fa-solid fa-chevron-down"></i></div>
+              <div class="page-content-navigation-bar-items">CONTACT</div>
             </div>
           </div>
           <div class="page-content-ads">
@@ -78,10 +79,34 @@
             </div>
           </div>
           <div class="page-content-services">
-            <div class="page-content-services-item"></div>
-            <div class="page-content-services-item"></div>
-            <div class="page-content-services-item"></div>
-            <div class="page-content-services-item"></div>
+            <div class="page-content-services-item">
+              <i class="fa-solid fa-paper-plane fa-2xl"></i>
+              <div class="page-content-services-description">
+                <span>Free Shipping</span>
+                <span>On all orders over $75.00</span>
+              </div>
+            </div>
+            <div class="page-content-services-item">
+              <i class="fa-solid fa-arrow-rotate-right fa-2xl"></i>
+              <div class="page-content-services-description">
+                <span>Free Shipping</span>
+                <span>On all orders over $75.00</span>
+              </div>
+            </div>
+            <div class="page-content-services-item">
+              <i class="fa-solid fa-credit-card fa-2xl"></i>
+              <div class="page-content-services-description">
+                <span>Free Shipping</span>
+                <span>On all orders over $75.00</span>
+              </div>
+            </div>
+            <div class="page-content-services-item">
+              <i class="fa-solid fa-life-ring fa-2xl"></i>
+              <div class="page-content-services-description">
+                <span>Free Shipping</span>
+                <span>On all orders over $75.00</span>
+              </div>
+            </div>
           </div>
           <div class="shop-actions">
             <div class="shop-actions-item">
@@ -91,7 +116,13 @@
                 <button>Shop Now</button>
               </div>
             </div>
-            <div class="shop-actions-item"></div>
+            <div class="shop-actions-item">
+              <div class="shop-actions-container">
+                <h2>Living Room Set</h2>
+                <h1>Hauteville Plywood New Chair</h1>
+                <button>Shop Now</button>
+              </div>
+            </div>
           </div>
           <div class="shop-actions-categories">
             <div class="shop-actions-categories-title"></div>
@@ -127,14 +158,19 @@
         </div>
       </main>
       <footer class="footer">
-        <div class="footer-container">
-          <div class="subscribe-section">
-            <div class="subscribe-section-title"></div>
+        <div class="subscribe-section">
+          <div class="subscribe-section-container">
+            <div class="subscribe-section-title">
+              <i class="fa-solid fa-paper-plane fa-2xl"></i>
+              <span>Free Shipping</span>
+            </div>
             <div class="subscribe-container">
               <input type="email" class="subscribe-email-input" placeholder="Enter email address"/>
               <button>Subscribe</button>
             </div>
           </div>
+        </div>
+        <div class="footer-container">
           <div class="footer-navigation">
             <div class="footer-navigation-item"></div>
             <div class="footer-navigation-item"></div>
