Shopping widget and multiple styles fixes.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </div>        
       </header>
       <main class="content">
-        <div class="content-container">
+        <div class="page-content-info">
+          <div class="page-content-info-container">
           <div class="page-content-header">
             <div class="page-content-header-contact">
               <i class="fa-solid fa-phone fa-2x"></i>
@@ -51,7 +52,30 @@
                 </button>
               </div>
               <p class="shopping-cart-total-price">$54.90</p>
-              <div id="shoppingCartWidget" class="shopping-cart-widget"></div>
+              <div id="shoppingCartWidget" class="shopping-cart-widget">
+                <div class="shopping-cart-container">
+                  <div class="shopping-cart-bought">
+                    <img src="/images/komodine-me-dru-teak.jpg" alt="">
+                    <div class="shopping-card-bought-details">
+                      <span>Vulputate justo</span>
+                      <span>Qty 1</span>
+                      <span>$90.00</span>
+                    </div>
+                    <button>x</button>
+                  </div>
+                  <div class="shopping-cart-bought"></div>
+                  <div class="shopping-cart-calculation">
+                    <div class="shopping-cart-calculation-actions">
+                      <span>Subtotal</span>
+                      <span>Shipping</span>
+                      <span>Taxes</span>
+                      <span>Total</span>
+                    </div>
+                    <div class="shopping-cart-calculation-prices"></div>
+                  </div>
+                  <button>CHECKOUT</button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="page-content-navigation">
@@ -66,16 +90,19 @@
               <div class="page-content-navigation-bar-items">CONTACT</div>
             </div>
           </div>
+        </div>
+        </div>
+        <div class="content-container">
           <div class="page-content-ads">
             <div class="page-content-ads-item">
               <p class="product-name">Wooden Chair.</p>
               <p class="product-category">Modern Furniture</p>
-              <p class="product-price">250$</p>
+              <p class="product-price">$250.45</p>
             </div>
             <div class="page-content-ads-item">
               <p class="product-name">Wooden Chair.</p>
               <p class="product-category">Modern Furniture</p>
-              <p class="product-price">250$</p>
+              <p class="product-price">$250.45</p>
             </div>
           </div>
           <div class="page-content-services">
@@ -89,22 +116,22 @@
             <div class="page-content-services-item">
               <i class="fa-solid fa-arrow-rotate-right fa-2xl"></i>
               <div class="page-content-services-description">
-                <span>Free Shipping</span>
-                <span>On all orders over $75.00</span>
+                <span>Easy 30 Days Returns</span>
+                <span>30 days money back</span>
               </div>
             </div>
             <div class="page-content-services-item">
               <i class="fa-solid fa-credit-card fa-2xl"></i>
               <div class="page-content-services-description">
-                <span>Free Shipping</span>
-                <span>On all orders over $75.00</span>
+                <span>100% Secure</span>
+                <span>Pay/Pal Master Card/ Visa</span>
               </div>
             </div>
             <div class="page-content-services-item">
               <i class="fa-solid fa-life-ring fa-2xl"></i>
               <div class="page-content-services-description">
-                <span>Free Shipping</span>
-                <span>On all orders over $75.00</span>
+                <span>24/7 Support</span>
+                <span>We will be at your service</span>
               </div>
             </div>
           </div>
